"""
WebTiles: Modern Tile Storage Format
"""

module(
    name = "webtiles-cpp",
    version = "0.3.0",
)

bazel_dep(name = "abseil-cpp", version = "20260526.0")
bazel_dep(name = "flatbuffers", version = "25.12.19")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "xxhash", version = "0.8.3.bcr.1")

bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# for converter and testdata
bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "fmt", version = "12.1.0", dev_dependency = True)
bazel_dep(name = "pigz", version = "2.8.bcr.1", dev_dependency = True)
bazel_dep(name = "re2", version = "2025-11-05.bcr.1", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.2.0", dev_dependency = True)
bazel_dep(name = "sqlite3", version = "3.53.2", dev_dependency = True)

bazel_dep(name = "webtiles")
archive_override(
    module_name = "webtiles",
    integrity = "sha256-TBYw1L0T9DzYPPIWeJqsXTzWSIgfxr9ca649dS3d1k4=",
    strip_prefix = "webtiles-spec-v0.3.0",
    urls = ["https://github.com/eak1mov/webtiles/archive/refs/tags/spec-v0.3.0.tar.gz"],
)

################################################################################
# toolchains
################################################################################

# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
# wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
# sudo dpkg -i libtinfo5_6.3-2ubuntu0.1_amd64.deb
bazel_dep(name = "toolchains_llvm", version = "1.8.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "18.1.8")
use_repo(llvm, "llvm_toolchain")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

# register_toolchains("@llvm_toolchain//:all")
# register_toolchains("@zig_sdk//toolchain:linux_amd64_musl")
register_toolchains("@zig_sdk//toolchain:linux_amd64_gnu.2.31")

# bazel_dep(name = "tcmalloc", version = "0.0.0-20250927-12f2552", dev_dependency = True)
# bazel_dep(name = "libpfm", version = "4.13.0", dev_dependency = True)

################################################################################
# development tools
################################################################################

# bazel build --config=clang-tidy -k //...
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "db677011c7363509a288a9fb3bf0a50830bbf791",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

# bazel build --config=clang-format -k //...
bazel_dep(name = "bazel_clang_format", dev_dependency = True)
git_override(
    module_name = "bazel_clang_format",
    commit = "af6c342dc592ad4f1af76d0260aac90d5c9b426f",
    remote = "https://github.com/oliverlee/bazel_clang_format.git",
)

# bazel run @hedron_compile_commands//:refresh_all
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

################################################################################
# testdata
################################################################################

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "testdata_input",
    build_file = "//testdata:testdata_input_files.bazel",
    integrity = "sha256-TIXLM63zCBMfruDQnPRoFJ8ZMg6V6YS6ZJhRRBb+tq4=",
    strip_prefix = "libtiles-testdata-index-v0.2.0",
    urls = ["https://github.com/eak1mov/libtiles-testdata/archive/index-v0.2.0.tar.gz"],
)

# generated from @testdata_input by //testdata:testdata_output
http_archive(
    name = "testdata_output",
    build_file = "//testdata:testdata_output_files.bazel",
    integrity = "sha256-7oJOd9HcO54a7uRERvwz8EtzZlBREZeSr5qkP5NbTCs=",
    urls = ["https://github.com/eak1mov/libtiles-testdata/raw/refs/tags/wt-v0.3.0/testdata_output.tar.gz"],
)
