load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

TESTDATA_INDEX_INPUT = ("large", "medium", "small")

TESTDATA_INDEX_GENERATED = ("data42", "empty", "full5", "z20")

TESTDATA_INDEX_ALL = TESTDATA_INDEX_INPUT + TESTDATA_INDEX_GENERATED

TESTDATA_WT = [("z20", "sparse")] + [
    (name, format)
    for name in ("data42", "empty", "full5", "large", "medium", "small")
    for format in ("basic", "plain", "sparse")
]

TESTDATA_FILES_INDEX = [name + ".index" for name in TESTDATA_INDEX_ALL]

TESTDATA_FILES_WT = ["{0}_{1}.wtiles".format(name, format) for name, format in TESTDATA_WT]

TESTDATA_FILES = TESTDATA_FILES_INDEX + TESTDATA_FILES_WT

# testdata from @testdata_output

filegroup(
    name = "testdata",
    srcs = TESTDATA_FILES,
    visibility = ["//:__subpackages__"],
)

[
    copy_file(
        name = "testdata_" + file,
        src = "@testdata_output//:" + file,
        out = file,
    )
    for file in TESTDATA_FILES
]

# testdata generator (@testdata_input -> @testdata_output)

pkg_tar(
    name = "testdata_output",
    srcs = [":out_all"],
    compressor = "@pigz//:pigz",
    extension = "tar.gz",
    strip_prefix = "out",
)

filegroup(
    name = "out_all",
    srcs = ["out/" + file for file in TESTDATA_FILES],
)

[
    copy_file(
        name = "out_" + name,
        src = "@testdata_input//:{0}.index".format(name),
        out = "out/{0}.index".format(name),
    )
    for name in TESTDATA_INDEX_INPUT
]

[
    run_binary(
        name = "out_" + name,
        srcs = [],
        outs = ["out/{0}.index".format(name)],
        args = [
            "-t",
            name,
            "-o",
            "$(location out/{0}.index)".format(name),
        ],
        tool = ":generate",
    )
    for name in TESTDATA_INDEX_GENERATED
]

[
    run_binary(
        name = "out_{0}_{1}".format(name, format),
        srcs = ["out/{0}.index".format(name)],
        outs = ["out/{0}_{1}.wtiles".format(name, format)],
        args = [
            "-i",
            "$(location out/{0}.index)".format(name),
            "-o",
            "$(location out/{0}_{1}.wtiles)".format(name, format),
            "-f",
            format,
        ],
        tool = ":wt_import",
    )
    for name, format in TESTDATA_WT
]

cc_binary(
    name = "generate",
    srcs = ["generate.cpp"],
    copts = ["-std=c++20"],
    linkstatic = 1,
    deps = [
        "//webtiles:tileindex",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:initialize",
    ],
)

cc_binary(
    name = "wt_import",
    srcs = ["wt_import.cpp"],
    copts = ["-std=c++20"],
    linkstatic = 1,
    deps = [
        "//webtiles",
        "//webtiles:index_format",
        "//webtiles:tileindex",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:initialize",
    ],
)
