exports_files([
    "data42.index",
    "data42_basic.wtiles",
    "data42_plain.wtiles",
    "data42_sparse.wtiles",
    "empty.index",
    "empty_basic.wtiles",
    "empty_plain.wtiles",
    "empty_sparse.wtiles",
    "full5.index",
    "full5_basic.wtiles",
    "full5_plain.wtiles",
    "full5_sparse.wtiles",
    "large.index",
    "large_basic.wtiles",
    "large_plain.wtiles",
    "large_sparse.wtiles",
    "medium.index",
    "medium_basic.wtiles",
    "medium_plain.wtiles",
    "medium_sparse.wtiles",
    "small.index",
    "small_basic.wtiles",
    "small_plain.wtiles",
    "small_sparse.wtiles",
    "z20.index",
    "z20_sparse.wtiles",
])
